k8s/pro/service-definition.yml
apiVersion: v1
kind: Service
metadata:
 namespace: virgin
 name: virgin-blog
spec:
 type: NodePort
 selector:
  app: virgin-blog
 ports:
  - name: http
    protocol: TCP
    nodePort: 30163
    port: 8080
    targetPort: 80
